<resources>
    <string name="app_name" translatable="false">FairEmail</string>
    <string name="app_copyright" translatable="false">Copyright &#x24B8; 2018–2024 by M. Bokhorst</string>
    <string name="app_search">FairEmail search</string>
    <string name="app_send_self">Send to self</string>
    <string name="app_answer" translatable="false">FairEmail template</string>
    <string name="app_changelog">Changelog</string>
    <string name="app_welcome">FairEmail is an open source email app focused on privacy and security. For this reason some features might work differently from what you are used to.</string>
    <string name="app_limitations">For example, messages are reformatted by default to remove unsafe elements and to improve readability, and opening links needs to be confirmed for safety. Both can be disabled if desired.</string>
    <string name="app_eula" translatable="false">THIS SOFTWARE IS PROVIDED BY THE AUTHOR \'\'AS IS\'\' AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE AUTHOR BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.</string>
    <string name="app_unsupported">Bugs in the Android version of this particular device cause crashes</string>
    <string name="app_data_loss">All data may be lost</string>
    <string name="app_continue">Continue anyway</string>
    <string name="app_exit">Go \'back\' again to exit</string>
    <string name="app_cake">Insufficient storage space left</string>
    <string name="app_cake_remaining">Remaining storage space on the device: %1$s</string>
    <string name="app_cake_required">Minimum required storage space: %1$s</string>
    <string name="app_updated">Last update: %1$s</string>
    <string name="app_download">Downloaded from: %1$s</string>
    <string name="app_dmarc" translatable="false">DMARC</string>
    <string name="channel_service">Monitor</string>
    <string name="channel_send">Send</string>
    <string name="channel_notification">Email</string>
    <string name="channel_progress">Progress</string>
    <string name="channel_update">Updates</string>
    <string name="channel_announcements">Announcements</string>
    <string name="channel_warning">Warnings</string>
    <string name="channel_error">Errors</string>
    <string name="channel_alert">Server alerts</string>
    <string name="channel_group_contacts">Contacts</string>
    <string name="channel_service_description">Synchronizing and monitoring of accounts</string>
    <string name="channel_send_description">Sending of messages</string>
    <string name="channel_notification_description">New message notifications</string>
    <string name="channel_progress_description">Progress notifications of longer running activities</string>
    <plurals name="page_conversation">
        <item quantity="one">Conversation</item>
        <item quantity="other">Conversations</item>
    </plurals>
    <plurals name="page_message">
        <item quantity="one">Message</item>
        <item quantity="other">Messages</item>
    </plurals>
    <string name="page_folders">Folders</string>
    <string name="page_compose">Compose</string>
    <string name="tile_synchronize">Synchronize</string>
    <string name="tile_unseen">New messages</string>
    <string name="tile_already_added" translatable="false">Tile was already added</string>
    <string name="shortcut_refresh">Refresh</string>
    <string name="shortcut_compose">Compose</string>
    <string name="shortcut_setup">Settings</string>
    <plurals name="title_notification_synchronizing">
        <item quantity="one">Monitoring %1$d account</item>
        <item quantity="other">Monitoring %1$d accounts</item>
    </plurals>
    <plurals name="title_notification_operations">
        <item quantity="zero"></item>
        <item quantity="one">%1$d operation pending</item>
        <item quantity="other">%1$d operations pending</item>
    </plurals>
    <plurals name="title_notification_unseen">
        <item quantity="one">%1$d new message</item>
        <item quantity="other">%1$d new messages</item>
    </plurals>
    <plurals name="title_notification_unsent">
        <item quantity="one">%1$d message to be sent</item>
        <item quantity="other">%1$d messages to be sent</item>
    </plurals>
    <plurals name="title_tile_unseen">
        <item quantity="one">%1$d new</item>
        <item quantity="other">%1$d new</item>
    </plurals>
    <plurals name="title_moving_messages">
        <item quantity="one">Move %1$d message?</item>
        <item quantity="other">Move %1$d messages?</item>
    </plurals>
    <plurals name="title_deleting_messages">
        <item quantity="one">Delete %1$d message permanently?</item>
        <item quantity="other">Delete %1$d messages permanently?</item>
    </plurals>
    <plurals name="title_attachments">
        <item quantity="one">One attachment</item>
        <item quantity="other">%1$d attachments</item>
    </plurals>
    <plurals name="title_ask_spam">
        <item quantity="one">Treat %1$d message as spam?</item>
        <item quantity="other">Treat %1$d messages as spam?</item>
    </plurals>
    <string name="title_ask_spam_who">Treat message from %1$s as spam?</string>
    <string name="title_junk_hint">Your email provider is responsible for filtering spam. An email app does not have all the data needed to do this reliably.</string>
    <string name="menu_setup">Settings</string>
    <string name="title_advanced_section_main">Main</string>
    <string name="title_advanced_section_synchronize">Receive</string>
    <string name="title_advanced_section_send">Send</string>
    <string name="title_advanced_section_connection">Connection</string>
    <string name="title_advanced_section_display">Display</string>
    <string name="title_advanced_section_behavior">Behavior</string>
    <string name="title_advanced_section_privacy">Privacy</string>
    <string name="title_advanced_section_encryption">Encryption</string>
    <string name="title_advanced_section_notifications">Notifications</string>
    <string name="title_advanced_section_misc">Miscellaneous</string>
    <string name="title_folder_inbox">Inbox</string>
    <string name="title_folder_junk">Spam</string>
    <string name="title_folder_primary">Folders primary account</string>
    <string name="title_seen">Mark read</string>
    <string name="title_unseen">Mark unread</string>
    <string name="title_hide">Hide</string>
    <string name="title_flag">Add star</string>
    <string name="title_flag_color">Colored star &#8230;</string>
    <string name="title_set_importance">Set importance</string>
    <string name="title_importance_low">Low</string>
    <string name="title_importance_normal">Normal</string>
    <string name="title_importance_high">High</string>
    <string name="title_search_in_text">Search in text &#8230;</string>
    <string name="title_forward">Forward</string>
    <string name="title_new_message">New message</string>
    <string name="title_editasnew">Edit as new</string>
    <string name="title_edit_notes">Edit local notes</string>
    <string name="title_create_rule">Create rule &#8230;</string>
    <string name="title_force_light">Force light theme</string>
    <string name="title_share">Share</string>
    <string name="title_event">Add to calendar</string>
    <string name="title_pin">Add shortcut</string>
    <string name="title_print">Print</string>
    <string name="title_show_headers">Show headers</string>
    <string name="title_raw_save">Save raw message</string>
    <string name="title_raw_send">Send as attachment</string>
    <string name="title_raw_send_message">Message</string>
    <string name="title_raw_send_thread">Conversation</string>
    <string name="title_manage_keywords">Manage keywords</string>
    <string name="title_configure_buttons">Configure buttons &#8230;</string>
    <string name="title_trash">Trash</string>
    <string name="title_copy_to">Copy to &#8230;</string>
    <string name="title_delete">Delete</string>
    <string name="title_spam">Spam</string>
    <string name="title_move_to">Move to &#8230;</string>
    <string name="title_delete_permanently">Delete permanently</string>
    <string name="title_snooze">Snooze &#8230;</string>
    <string name="title_archive">Archive</string>
    <string name="title_reply_to_sender">Reply to sender</string>
    <string name="title_reply_to_all">Reply to all</string>
    <string name="title_reply_list">Reply to list</string>
    <string name="title_reply_receipt">Send read receipt</string>
    <string name="title_reply_template">Reply with template</string>
    <string name="title_style_size">Size</string>
    <string name="title_style_size_small">Small</string>
    <string name="title_style_size_medium">Medium</string>
    <string name="title_style_size_large">Large</string>
    <string name="title_style_align">Align</string>
    <string name="title_style_align_start">Start</string>
    <string name="title_style_align_center">Center</string>
    <string name="title_style_align_end">End</string>
    <string name="title_style_list">List</string>
    <string name="title_style_list_bullets">Bullets</string>
    <string name="title_style_list_numbered">Numbered</string>
    <string name="title_style_list_level_increase">Increase indentation</string>
    <string name="title_style_list_level_decrease">Decrease indentation</string>
    <string name="title_style_font">Font</string>
    <string name="title_style_blockquote">Block quote</string>
    <string name="title_style_strikethrough">Strikethrough</string>
    <string name="title_style_clear">Clear formatting</string>
    <string name="title_translate">Translate</string>
    <string name="title_decrypt">Decrypt</string>
    <string name="title_thread_info" translatable="false">Thread info</string>
    <string name="title_resync">Resync</string>
    <string name="title_charset">Encoding</string>
    <string name="title_alternative_text">Load plain text</string>
    <string name="title_search">Search</string>
    <string name="title_sort_on">Sort on</string>
    <string name="title_sort_on_time">Time</string>
    <string name="title_sort_on_unread">Unread</string>
    <string name="title_sort_on_starred">Starred</string>
    <string name="title_sort_on_sender">Sender</string>
    <string name="title_sort_on_subject">Subject</string>
    <string name="title_sort_on_size">Size</string>
    <string name="title_sort_on_order">Order</string>
    <string name="title_sort_on_applied">Applied count</string>
    <string name="title_sort_on_last_applied">Last applied</string>
    <string name="title_filter">Filter out</string>
    <string name="title_filter_seen">Read</string>
    <string name="title_filter_unflagged">Unstarred</string>
    <string name="title_filter_duplicates">Duplicates</string>
    <string name="title_compact">Compact view</string>
    <string name="title_zoom">Text size</string>
    <string name="title_select_all">Select all</string>
    <string name="title_force_sync">Force sync</string>
    <string name="title_answer_reply">Reply template</string>
    <string name="title_log">Log</string>
    <string name="title_rules_export">Export rules</string>
    <string name="title_rules_import">Import rules</string>
    <string name="title_rules_delete_all">Delete all rules</string>
</resources>