<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_forward"
        android:title="@string/title_forward" />

    <item
        android:id="@+id/menu_reply_all"
        android:title="@string/title_reply_all" />

    <item
        android:id="@+id/menu_answer"
        android:title="@string/title_answer_reply" />

    <item
        android:id="@+id/menu_unseen"
        android:title="@string/title_unseen" />

    <item
        android:id="@+id/menu_snooze"
        android:title="@string/title_snooze" />

    <item
        android:id="@+id/menu_delete"
        android:title="@string/title_delete" />

    <item
        android:id="@+id/menu_junk"
        android:title="@string/title_spam" />

    <item
        android:id="@+id/menu_create_rule"
        android:title="@string/title_create_rule" />

    <item
        android:id="@+id/menu_share"
        android:title="@string/title_share" />

    <item
        android:id="@+id/menu_show_headers"
        android:checkable="true"
        android:title="@string/title_show_headers" />

    <item
        android:id="@+id/menu_raw"
        android:title="@string/title_raw_download" />

    <item
        android:id="@+id/menu_manage_keywords"
        android:title="@string/title_manage_keywords" />

    <item
        android:id="@+id/menu_decrypt"
        android:title="@string/title_decrypt" />
</menu>
