<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/baseline_search_24"
        android:title="@string/title_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="collapseActionView|always" />

    <item
        android:id="@+id/menu_folders"
        android:actionLayout="@layout/action_button"
        android:title="@string/title_folder_primary"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_sort_on"
        android:icon="@drawable/baseline_sort_24"
        android:title="@string/title_sort_on"
        app:showAsAction="ifRoom">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/menu_sort_on_time"
                    android:title="@string/title_sort_on_time" />
                <item
                    android:id="@+id/menu_sort_on_unread"
                    android:title="@string/title_sort_on_unread" />
                <item
                    android:id="@+id/menu_sort_on_starred"
                    android:title="@string/title_sort_on_starred" />
                <item
                    android:id="@+id/menu_sort_on_sender"
                    android:title="@string/title_sort_on_sender" />
                <item
                    android:id="@+id/menu_sort_on_subject"
                    android:title="@string/title_sort_on_subject" />
                <item
                    android:id="@+id/menu_sort_on_size"
                    android:title="@string/title_sort_on_size" />
                <item
                    android:id="@+id/menu_sort_on_snoozed"
                    android:title="@string/title_sort_on_snoozed" />
            </group>
        </menu>
    </item>

    <item
        android:id="@+id/menu_filter"
        android:icon="@drawable/baseline_filter_list_24"
        android:title="@string/title_filter"
        app:showAsAction="ifRoom">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/menu_filter_seen"
                    android:checkable="true"
                    android:title="@string/title_filter_seen" />

                <item
                    android:id="@+id/menu_filter_unflagged"
                    android:checkable="true"
                    android:title="@string/title_filter_unflagged" />

                <item
                    android:id="@+id/menu_filter_snoozed"
                    android:checkable="true"
                    android:title="@string/title_filter_snoozed" />

                <item
                    android:id="@+id/menu_filter_duplicates"
                    android:checkable="true"
                    android:title="@string/title_filter_duplicates" />
            </group>
        </menu>
    </item>

    <item
        android:id="@+id/menu_zoom"
        android:icon="@drawable/baseline_format_size_24"
        android:title="@string/title_zoom"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_compact"
        android:checkable="true"
        android:title="@string/title_compact"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_select_all"
        android:icon="@drawable/baseline_format_size_24"
        android:title="@string/title_select_all"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_force_sync"
        android:icon="@drawable/baseline_sync_24"
        android:title="@string/title_force_sync"
        app:showAsAction="never" />
</menu>
