<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_style_size"
        android:icon="@drawable/twotone_format_size_24"
        android:orderInCategory="1"
        android:title="@string/title_style_size">
        <menu>
            <group android:id="@+id/group_style_size">
                <item
                    android:id="@+id/menu_style_size_small"
                    android:title="@string/title_style_size_small" />

                <item
                    android:id="@+id/menu_style_size_medium"
                    android:title="@string/title_style_size_medium" />

                <item
                    android:id="@+id/menu_style_size_large"
                    android:title="@string/title_style_size_large" />
            </group>
        </menu>
    </item>

    <group
        android:id="@+id/group_style_color"
        android:orderInCategory="2">
        <item
            android:id="@+id/menu_style_color"
            android:icon="@drawable/twotone_palette_24"
            android:title="@string/title_style_color" />
    </group>

    <item
        android:id="@+id/menu_style_align"
        android:icon="@drawable/twotone_format_align_center_24"
        android:orderInCategory="3"
        android:title="@string/title_style_align">
        <menu>
            <group android:id="@+id/group_style_align">
                <item
                    android:id="@+id/menu_style_align_start"
                    android:icon="@drawable/twotone_format_align_left_24"
                    android:title="@string/title_style_align_start" />

                <item
                    android:id="@+id/menu_style_align_center"
                    android:icon="@drawable/twotone_format_align_center_24"
                    android:title="@string/title_style_align_center" />

                <item
                    android:id="@+id/menu_style_align_end"
                    android:icon="@drawable/twotone_format_align_right_24"
                    android:title="@string/title_style_align_end" />
            </group>
        </menu>
    </item>

    <item
        android:id="@+id/menu_style_list"
        android:icon="@drawable/twotone_format_list_bulleted_24"
        android:orderInCategory="4"
        android:title="@string/title_style_list">
        <menu>
            <group android:id="@+id/group_style_list">
                <item
                    android:id="@+id/menu_style_list_bullets"
                    android:icon="@drawable/twotone_format_list_bulleted_24"
                    android:title="@string/title_style_list_bullets" />
                <item
                    android:id="@+id/menu_style_list_numbered"
                    android:icon="@drawable/twotone_format_list_numbered_24"
                    android:title="@string/title_style_list_numbered" />
                <item
                    android:id="@+id/menu_style_list_increase"
                    android:icon="@drawable/twotone_format_indent_increase_24"
                    android:title="@string/title_style_list_level_increase" />
                <item
                    android:id="@+id/menu_style_list_decrease"
                    android:icon="@drawable/twotone_format_indent_decrease_24"
                    android:title="@string/title_style_list_level_decrease" />
            </group>
        </menu>
    </item>

    <item
        android:id="@+id/menu_style_font"
        android:icon="@drawable/twotone_title_24"
        android:orderInCategory="5"
        android:title="@string/title_style_font">
        <menu>
            <group android:id="@+id/group_style_font" />
        </menu>
    </item>

    <group
        android:id="@+id/group_style_blockquote"
        android:orderInCategory="6">
        <item
            android:id="@+id/menu_style_blockquote"
            android:icon="@drawable/twotone_format_quote_24"
            android:title="@string/title_style_blockquote" />
    </group>

    <group
        android:id="@+id/group_style_strikethrough"
        android:orderInCategory="7">
        <item
            android:id="@+id/menu_style_strikethrough"
            android:icon="@drawable/twotone_format_strikethrough_24"
            android:title="@string/title_style_strikethrough" />
    </group>

    <group
        android:id="@+id/group_style_clear"
        android:orderInCategory="8">
        <item
            android:id="@+id/menu_style_clear"
            android:icon="@drawable/twotone_format_clear_24"
            android:title="@string/title_style_clear" />
    </group>
</menu>