<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_hide"
        android:icon="@drawable/twotone_visibility_off_24"
        android:title="@string/title_hide" />

    <item
        android:id="@+id/menu_settings"
        android:icon="@drawable/twotone_settings_24"
        android:title="@string/menu_setup">
        <menu>
            <item
                android:id="@+id/menu_settings_main"
                android:icon="@drawable/twotone_home_24"
                android:orderInCategory="0"
                android:title="@string/title_advanced_section_main" />

            <item
                android:id="@+id/menu_settings_sync"
                android:icon="@drawable/twotone_sync_24"
                android:orderInCategory="1"
                android:title="@string/title_advanced_section_synchronize" />

            <item
                android:id="@+id/menu_settings_send"
                android:icon="@drawable/twotone_send_24"
                android:orderInCategory="2"
                android:title="@string/title_advanced_section_send" />

            <item
                android:id="@+id/menu_settings_connection"
                android:icon="@drawable/twotone_cloud_24"
                android:orderInCategory="3"
                android:title="@string/title_advanced_section_connection" />

            <item
                android:id="@+id/menu_settings_display"
                android:icon="@drawable/twotone_monitor_24"
                android:orderInCategory="4"
                android:title="@string/title_advanced_section_display" />

            <item
                android:id="@+id/menu_settings_behavior"
                android:icon="@drawable/twotone_psychology_24"
                android:orderInCategory="5"
                android:title="@string/title_advanced_section_behavior" />

            <item
                android:id="@+id/menu_settings_privacy"
                android:icon="@drawable/twotone_account_circle_24"
                android:orderInCategory="6"
                android:title="@string/title_advanced_section_privacy" />

            <item
                android:id="@+id/menu_settings_encryption"
                android:icon="@drawable/twotone_lock_24"
                android:orderInCategory="7"
                android:title="@string/title_advanced_section_encryption" />

            <item
                android:id="@+id/menu_settings_notification"
                android:icon="@drawable/twotone_notifications_24"
                android:orderInCategory="8"
                android:title="@string/title_advanced_section_notifications" />

            <item
                android:id="@+id/menu_settings_misc"
                android:icon="@drawable/twotone_more_24"
                android:orderInCategory="9"
                android:title="@string/title_advanced_section_misc" />
        </menu>
    </item>
</menu>
