<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_importance_low"
        android:checkable="true"
        android:icon="@drawable/baseline_arrow_downward_24"
        android:title="@string/title_importance_low" />

    <item
        android:id="@+id/menu_seen"
        android:checkable="true"
        android:icon="@drawable/twotone_drafts_24"
        android:title="@string/title_seen" />

    <item
        android:id="@+id/menu_flag"
        android:checkable="true"
        android:icon="@drawable/twotone_star_24"
        android:title="@string/title_flag" />

    <item
        android:id="@+id/menu_inbox"
        android:checkable="true"
        android:icon="@drawable/twotone_inbox_24"
        android:title="@string/title_folder_inbox" />

    <item
        android:id="@+id/menu_archive"
        android:checkable="true"
        android:icon="@drawable/twotone_archive_24"
        android:title="@string/title_archive" />

    <item
        android:id="@+id/menu_junk"
        android:checkable="true"
        android:icon="@drawable/twotone_report_24"
        android:title="@string/title_folder_junk" />

    <item
        android:id="@+id/menu_trash"
        android:checkable="true"
        android:icon="@drawable/twotone_delete_24"
        android:title="@string/title_trash" />
</menu>
