<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/twotone_search_24"
        android:title="@string/title_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="collapseActionView|always" />

    <item
        android:id="@+id/menu_sort_on"
        android:icon="@drawable/twotone_sort_24"
        android:title="@string/title_sort_on"
        app:showAsAction="ifRoom">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/menu_sort_on_order"
                    android:title="@string/title_sort_on_order" />
                <item
                    android:id="@+id/menu_sort_on_applied"
                    android:title="@string/title_sort_on_applied" />
                <item
                    android:id="@+id/menu_sort_on_last_applied"
                    android:title="@string/title_sort_on_last_applied" />
            </group>
        </menu>
    </item>

    <group android:id="@+id/group_backup">
        <item
            android:id="@+id/menu_export"
            android:title="@string/title_rules_export"
            app:showAsAction="never" />

        <item
            android:id="@+id/menu_import"
            android:title="@string/title_rules_import"
            app:showAsAction="never" />
    </group>

    <group android:id="@+id/group_operations">
        <item
            android:id="@+id/menu_delete_all"
            android:title="@string/title_rules_delete_all"
            app:showAsAction="never" />
    </group>
</menu>
